Fix CSS wraparound

--- a/otisweb/static/css/otis.css
+++ b/otisweb/static/css/otis.css
@@ -83,13 +83,13 @@ table.curriculum th, table.curriculum td {
 table.curriculum td.number {
 	text-align: right;
 	font-size: 12px;
-	max-width: 30px;
+	min-width: max-content;
 }
 table.curriculum td.code {
 	text-align: right;
 	font-size: 12px;
 	font-family: Inconsolata, Consolas, monaco, monospace;
-	width: 64px;
+	min-width: max-content;
 }
 
 table.curriculum td.active {
@@ -99,8 +99,9 @@ table.curriculum td.active {
 }
 
 table.curriculum td.emojis {
-	width: 150px;
+	text-align: right;
 	font-size: 17px;
+	min-width: max-content;
 }
 
 #side .emoji-link {
